# avx512_gemm

./: .gitignore  CMakeLists.txt  avx512_benchmark.cpp  avx512_test.c  avx512_test.cpp
benchmark_data/: GEMM.txt
scripts/: test.c
src/: avx512_kernel.c  avx512_kernel.cpp  avx512_kernel.h  avx512_matmul.c  avx512_matmul.cpp  avx512_matmul.h
